--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Heitor Lima"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Heitor Lima"
 description              : &description "personal description"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "PhD Candidate in Economics at Insper"
   location         : "Sao Paulo, Brazil"
-  employer         : "Insper Institute of Education and Research"
+  employer         : "Insper"
   uri              : # URL
   email            : "heitoraol@al.insper.edu.br" 
 
@@ -56,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/heitor-lima/"
+  linkedin         : "heitor-lima"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -64,7 +64,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : "https://twitter.com/heitoralveslima"  # Replace this with your X / Twitter handle
+  twitter          : "heitoralveslima"  # Replace this with your X / Twitter handle
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
