--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@
 # Basic Site Settings
 locale                   : "en-US"
 title                    : "Heitor Lima"
-title_separator          : "-"
-name                     : &name "Heitor Lima"
-description              : &description "personal description"
+title_separator          : #"-"
+name                     : #&name "Heitor Lima"
+description              : #&description "personal description"
 url                      : https://heitoraolima.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
