--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Heitor Lima"
   pronouns         : # example: "she/her"  
   bio              : #"PhD Candidate in Economics at Insper"
-  location         : #"Sao Paulo, Brazil"
+  location         : "Sao Paulo, Brazil"
   employer         : #<a href="https://www.insper.edu.br/en/graduate/doctoral-program/doctoral-in-business-economics-phd-in-business-economics/">Insper</a>
   uri              : # URL
   email            : "heitoraol@al.insper.edu.br" 
