--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "CV"
-    url: /assets/files/cv_heitor_lima.pdf
+    url: heitoraolima.github.io/files/cv_heitor_lima.pdf
   
   # - title: "Publications"
   #  url: /publications/
