--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile_picture.jpg"
   name             : "Heitor Lima"
   pronouns         : # example: "she/her"  
-  bio              : #"PhD Candidate in Economics at Insper"
+  bio              : "PhD Student"
   location         : "Sao Paulo, Brazil"
   employer         : #<a href="https://www.insper.edu.br/en/graduate/doctoral-program/doctoral-in-business-economics-phd-in-business-economics/">Insper</a>
   uri              : # URL
