--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /research/
   
   - title: "CV"
-    url: /files/cv_heitor_lima.pdf
+    url: /cv/
   
   # - title: "Publications"
   #  url: /publications/
