--- a/_config.yml
+++ b/_config.yml
@@ -212,6 +212,9 @@ collections:
     output: true
     permalink: /:collection/:path/
 
+# No favicon in the browser tab
+head:
+  - "<link rel='icon' type='image/x-icon' href='data:,'>"
 
 # Defaults
 defaults:
